[gd_scene load_steps=14 format=3 uid="uid://pa4b5sl2ju1n"]

[ext_resource type="Script" path="res://entities/entities_script/player.gd" id="1_mah8r"]
[ext_resource type="Script" path="res://resources/PolygonBody.gd" id="2_h6qts"]
[ext_resource type="Script" path="res://entities/entities_script/BulletRes.gd" id="2_je2js"]
[ext_resource type="Texture2D" uid="uid://drrlgjjdq4twp" path="res://textures/ui/bars/bg.png" id="3_8b3ji"]
[ext_resource type="PackedScene" uid="uid://bhrculwo037fi" path="res://menus/pause_menu.tscn" id="3_r0pq6"]
[ext_resource type="PackedScene" uid="uid://ctlk12wtd554v" path="res://ui/target.tscn" id="4_davdh"]
[ext_resource type="Texture2D" uid="uid://ptg8tcs3a5e0" path="res://textures/ui/bars/red.png" id="4_xj7c0"]
[ext_resource type="Texture2D" uid="uid://b041x38jby5jb" path="res://textures/ui/bars/blue.png" id="5_jdmre"]
[ext_resource type="Animation" uid="uid://bqe02inrdvmmd" path="res://resources/animation/death_animation.res" id="9_c0n7u"]

[sub_resource type="Resource" id="Resource_vpjub"]
resource_local_to_scene = true
script = ExtResource("2_je2js")
ignore_sender = true
max_speed = 25.0
move_speed = 15.0
turn_speed = 10.0
target_position = Vector2(0, 0)
damage = 1.0
maniability = 0.25
nano = 10
global_position = Vector2(0, 0)
rotation = 0.0
velocity = Vector2(0, 0)
type = "default"

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_bcdmy"]
height = 22.0

[sub_resource type="Gradient" id="Gradient_2xgqr"]
colors = PackedColorArray(1, 1, 1, 0, 1, 1, 1, 1)

[sub_resource type="AnimationLibrary" id="AnimationLibrary_q2yjb"]
_data = {
"death": ExtResource("9_c0n7u")
}

[node name="player" type="CharacterBody2D"]
motion_mode = 1
wall_min_slide_angle = 3.14159
platform_on_leave = 2
safe_margin = 0.1
script = ExtResource("1_mah8r")
bullet_preset = SubResource("Resource_vpjub")

[node name="body" type="Polygon2D" parent="."]
polygon = PackedVector2Array(-14, -14, 31, 0, -14, 13, -12, 0)
script = ExtResource("2_h6qts")

[node name="camera" type="Camera2D" parent="."]
zoom = Vector2(0.32, 0.32)
position_smoothing_enabled = true
position_smoothing_speed = 10.0

[node name="ui" type="CanvasLayer" parent="camera"]

[node name="hud" type="Control" parent="camera/ui"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="health" type="TextureProgressBar" parent="camera/ui/hud"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
value = 100.0
texture_under = ExtResource("3_8b3ji")
texture_progress = ExtResource("4_xj7c0")

[node name="nanos" type="TextureProgressBar" parent="camera/ui/hud"]
layout_mode = 0
offset_top = 48.0
offset_right = 256.0
offset_bottom = 96.0
value = 100.0
texture_under = ExtResource("3_8b3ji")
texture_progress = ExtResource("5_jdmre")

[node name="interaction" type="Label" parent="camera/ui"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -0.5
offset_top = -23.0
offset_right = 0.5
grow_horizontal = 2
grow_vertical = 0
horizontal_alignment = 1
vertical_alignment = 1

[node name="pause_menu" parent="camera/ui" instance=ExtResource("3_r0pq6")]
views_array = Array[String](["game_pause.tscn", "pause_inputs.tscn", "pause_options.tscn"])

[node name="shoot_timer" type="Timer" parent="."]

[node name="col" type="CollisionShape2D" parent="."]
position = Vector2(-1, 0)
rotation = 1.5708
shape = SubResource("CapsuleShape2D_bcdmy")

[node name="trail_timer" type="Timer" parent="."]

[node name="trail" type="Line2D" parent="."]
gradient = SubResource("Gradient_2xgqr")

[node name="target" parent="." instance=ExtResource("4_davdh")]
visible = false
z_index = 5

[node name="auto_target" type="Area2D" parent="."]
visible = false
top_level = true
collision_layer = 0
collision_mask = 0

[node name="col" type="CollisionPolygon2D" parent="auto_target"]
position = Vector2(-108, 15)
polygon = PackedVector2Array(-2466, -1452, 2669, -1445, 2631, 1425, -2451, 1432)

[node name="anim" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_q2yjb")
}

[connection signal="timeout" from="shoot_timer" to="." method="_on_shoot_timer_timeout"]
[connection signal="timeout" from="trail_timer" to="." method="_on_trail_timer_timeout"]
[connection signal="body_exited" from="auto_target" to="." method="_on_auto_target_body_exited"]
[connection signal="animation_finished" from="anim" to="." method="_on_anim_animation_finished"]
